(vendored_dirs vendor)

(executable
 (name gopcaml)
 (libraries core ecaml generic_parser)
 (preprocess (pps ppx_here ppx_let ppx_deriving.show ppx_deriving.enum ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv))
 (modes (native shared_object))
 (flags "-w" "-33"))


(install
 (section share_root)
 (files (gopcaml-mode.el as emacs/site-lisp/gopcaml-mode.el)
  (gopcaml-smartparens.el as emacs/site-lisp/gopcaml-smartparens.el)
  (gopcaml-multiple-cursors.el as emacs/site-lisp/gopcaml-multiple-cursors.el)))

(install
 (section lib)
 (files gopcaml.so))



