(lang dune 1.11)
(package
 (name gopcaml-mode-merlin)
 (synopsis
  "Ultimate Ocaml editing plugin, providing advanced structural editing, movement and analysis in Emacs (uses Merlin parser)")
 (description
  "Gopcaml-mode is a plugin for emacs for editing OCaml code. It aims to extend existing Emacs editing experience to closer match the features in modern IDEs (uses Merlin's error tolerant parser).")
 (depends
  (merlin (>= 2.5.0))
  (ocp-indent (>= 1.0.0))
  (dune (>= 2.9.0))
  (dot-merlin-reader (>= 4.0))
  (yojson (>= 1.6.0))
  (csexp (>= 1.2.3))
  (result (>= 1.5))
  (ppx_sexp_conv (>= v0.14.3))
  (ppx_let (>= v0.14.0))
  (ppx_here (>= v0.14.0))
  (ocaml (>= 4.12.0))
  (core (>= 0.13.0))
  (ppx_deriving (>= 4.4))
  (ecaml (>= 0.13.0))))
(version 0.0.4)
(name gopcaml-mode-merlin)
(generate_opam_files true)
(license GPL-3.0-only)
(source (uri git+https://gitlab.com/gopiandcode/gopcaml-mode.git))
(bug_reports https://gitlab.com/gopiandcode/gopcaml-mode/issues)
(homepage https://gitlab.com/gopiandcode/gopcaml-mode)
(authors "Kiran Gopinathan")
(maintainers "kirang@comp.nus.edu.sg")
